--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -39,10 +39,15 @@ RUN cd oce && \
     cmake  -DCMAKE_INSTALL_PREFIX=/usr/local \
         -DCMAKE_BUILD_TYPE=Release \
         -DOCE_TESTING=OFF \
+	-DOCE_DATAEXCHANGE=ON\
+	-DOCE_WITH_GL2PS=OFF\
+	-DOCE_VISUALISATION=ON\
+	-DOCE_WITH_FREEIMAGE=ON\
+	-DOCE_WITH_GL2PS= ON\
         -DOCE_USE_PCH=OFF \
  	-DOCE_COPY_HEADERS_BUILD=ON \
 	-DOCE_INSTALL_LIB_DIR=lib \
- 	-DOCE_INSTALL_LIB_DIR=lib \
+ 	-DOCE_MULTITHREAD_LIBRARY:STRING=TBB \
 	-DOCE_INSTALL_BIN_DIR=bin \
 	-DOCE_INSTALL_PREFIX=/usr/local -DOCE_ENABLE_DEB_FLAG=OFF .. &&\
         make VERBOSE=1 &&\
